# http_svr

./: Cargo.toml
hello_html/: Cargo.toml  README.md  hello.html
hello_html/src/: lib.rs  main.rs
http/src/: httprequest.rs  httpresponse.rs  lib.rs
httpserver/: Cargo.toml
httpserver/data/: orders.json
httpserver/public/: 404.html  health.html  index.html
httpserver/src/: handler.rs  main.rs  router.rs  server.rs
webservice/: .env  Cargo.toml
webservice/db/: postgres.sql
webservice/src/: db_access.rs  errors.rs  handlers.rs  routes.rs  state.rs
webservice/src/dbaccess/: course.rs
webservice/src/handlers/: course.rs  genneral.rs  mod.rs
webservice/src/models/: course.rs
